--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,55 @@
 
   <name>TLauncher</name>
   <url>http://maven.apache.org</url>
+  <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>manual</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses> 
+    
+    <developers>
+        <developer>
+            <id>println</id>
+            <name>Felipe Santos</name>
+            <email>fralph@ic.uff.br</email>                    
+            <url>https://github.com/println</url>                    
+        </developer>
+    </developers>
+    
+    <scm>
+        <url>https://github.com/println/TLauncher</url>
+        <connection>scm:git:https://github.com/println/TLauncher.git</connection>
+        <developerConnection>scm:git:https://github.com/println/TLauncher.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>br.uff.labtempo.tlauncher.App</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>                   
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
